[project]
name = "ab-public-well-data"
version = "0.1.0"
description = "Alberta Public Well Data Pipeline - an example data pipeline for downloading, processing, and normalizing public well data from Alberta Energy Regulator (AER) and Petrinex sources."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.26.0",
    "pyarrow>=19.0.1",
    "requests>=2.32.3",
    "setuptools>=78.1.0",
    "ydata-profiling>=4.16.1",
]
